# ChangeLog for dev-libs/libstroke
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libstroke/ChangeLog,v 1.22 2007/07/22 08:26:57 graaff Exp $

  22 Jul 2007; Hans de Graaff <graaff@gentoo.org> libstroke-0.5.1.ebuild:
  Drop virtual/x11 references.

  18 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove plasmaroo from metadata.xml due to retirement.

  22 Jan 2007; Alec Warner <antarus@gentoo.org> libstroke-0.5.1.ebuild:
  add WANT_AUTO{TOOLS,CONF} for bug # 162102

  01 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  files/libstroke-0.5.1-m4_syntax.patch,
  +files/libstroke-0.5.1-no_gtk1.patch, libstroke-0.5.1.ebuild:
  Remove gtk1 dependency and patch gtk1 stuff out of Makefile.am. Thanks to
  Renato Caldas for the patch; bug 156361

  03 Sep 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -libstroke-0.4.ebuild:
  clean out old, non-modX ebuild

  22 Jan 2006; <plasmaroo@gentoo.org> libstroke-0.5.1.ebuild:
  Port over to modular X.

  14 Nov 2005; <plasmaroo@gentoo.org> libstroke-0.5.1.ebuild,
  +files/libstroke-0.5.1-m4_syntax.patch:
  Add m4 fixes by James Rowe, bug #109329.

  07 Aug 2004; Tom Martin <slarti@gentoo.org> libstroke-0.4.ebuild,
  libstroke-0.5.1.ebuild:
  Typo in DESCRIPTION: Guesture -> Gesture. Bug 59717.

  31 Jul 2004; Tom Gall <tgall@gentoo.org> libstroke-0.5.1.ebuild:
  stable on ppc64, bug #57040

  30 Mar 2004; Donnie Berkholz <spyderous@gentoo.org>; libstroke-0.4.ebuild,
  libstroke-0.5.1.ebuild:
  Change x11-base/xfree dependency to virtual/x11.

  24 Mar 2004; Jason Wever <weeve@gentoo.org> libstroke-0.5.1.ebuild:
  Stable on sparc.

  01 Feb 2004; Jon Portnoy <avenj@gentoo.org> libstroke-0.5.1.ebuild :
  AMD64 keywords.

  15 Oct 2003; Tavis Ormandy <taviso@gentoo.org> libstroke-0.5.1.ebuild:
  fvwm appears to be the only application in portage depending
  on libstroke, and works perfectly with 0.5.1. marking stable on 
  alpha and x86.
