@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/rplay
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/rplay/ChangeLog,v 1.9 2007/02/03 20:20:29 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/rplay/ChangeLog,v 1.10 2007/08/07 09:58:52 uberlord Exp $
+
+  07 Aug 2007; Roy Marples <uberlord@gentoo.org> rplay-3.3.2.ebuild:
+  Keyworded ~x86-fbsd, #141142 thanks to Robert Annessi
 
   03 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
