@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libstroke
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libstroke/ChangeLog,v 1.22 2007/07/22 08:26:57 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libstroke/ChangeLog,v 1.23 2007/08/07 09:53:54 uberlord Exp $
+
+  07 Aug 2007; Roy Marples <uberlord@gentoo.org> libstroke-0.5.1.ebuild:
+  Keyworded ~x86-fbsd, #141142 thanks to Robert Annessi
 
   22 Jul 2007; Hans de Graaff <graaff@gentoo.org> libstroke-0.5.1.ebuild:
   Drop virtual/x11 references.
